# smart-delivery-robot

./: .gitignore  LICENSE  README.md  requirement.txt
database/: database.db  log_datas.db  menu.db  order_chit.db
src/: 4w  GUI.py  Nav2_goal.py  __init__.py  control_manager.py  database_manager.py  log_manager.py  main.py  map.pgm  map.yaml  order_manager.py  orders.txt  unit_db.py  unit_log.py  unit_ui.py
src/DTO/: MenuItem.py  OrderTicket.py  TableInfo.py  __init__.py
src/db_management/: __init__.py  database_manager.py
src/serving_bot_interfaces/: CMakeLists.txt  package.xml
src/serving_bot_interfaces/msg/: Order.msg
src/serving_bot_interfaces/srv/: PlaceOrder.srv
src/ssts/: GUI.py  __init__.py  package.xml  setup.cfg  setup.py
src/ssts/database/: database.db
src/ssts/db_management/: __init__.py  database_manager.py
src/ssts/ssts/: GUI.py  database_manager.py  log_manager.py  order_manager.py  unit_test.py
src/ui/: __init__.py
src/ui/katus/: order.py  tabla order.py
src/ui/kitchen_display/: app.py  data_management.py
src/ui/kitchen_display/servingbot/: MainWindow.ui  OrderLabel.ui  OrderTicket.ui  TableInfo.ui  test.ui
src/ui/kitchen_display/widgets/: MainWindow.ui  OrderLabel.ui  OrderTicket.ui  TableInfo.ui  main_ui.py  order_label_ui.py  order_ticket_ui.py  table_info_ui.py
tests/: test_except_robot.py  test_ui_subsystem.py
