<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ssts</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rbxorns1@naver.com">pgt</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>serving_bot_interfaces</depend>
  <depend>math</depend>
  <depend>ament_index_python</depend>
  <depend>os</depend>
  <depend>matplot</depend>
  <depend>seaborn</depend>
  <depend>pandas</depend>
  <depend>splite3</depend>
  <depend>datetime</depend>
  <depend>ssts.log_manager</depend>
  <depend>ssts.order_manager</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
